--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
     <footer>
         <div class="container-fluid copyright">
-            <p class="ft-devlp"> Made with <span id="heart" class="fa fa-heart"></span> by: <a href="https://www.facebook.com/profile.php?id=100071072136504"></a></p>
+            <p class="ft-devlp"> Made with <span id="heart" class="fa fa-heart"></span></p>
         </div>
     </footer>
 
